Fixed loader styles for better display on small screens & added opacue loader to all navbar menu clicks.

--- a/static/css/indicator.css
+++ b/static/css/indicator.css
@@ -1,5 +1,12 @@
 .htmx-indicator {
     display: none;
+    opacity: 0.8 !important;
+    /* fixed z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 */
+    position: fixed;
+    z-index: 10;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 .htmx-indicator.htmx-request{
     display: block;
